# zoltraak

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
labs/animation/: task_1.cpp  task_2.cpp
labs/complex_tasks/: task_1.cpp  task_2.cpp
labs/events/: task_1.cpp  task_2.cpp
labs/graphics/: task_1.cpp  task_2.cpp  task_3.cpp
src/: CGameController.cpp  CGameController.h  Common.h  Components.h  Entity.h  gif_load.h  main.cpp
src/common/: CEntityManager.h  Common.h  Components.h  Entity.h  Utils.h
src/common/actions/: Actions.h
src/common/assets_storage/: CFontStorage.cpp  CFontStorage.h
src/common/events/: CEventDispatcher.cpp  CEventDispatcher.h  Event.h
src/common/gif_converter/: CGifConverter.cpp  CGifConverter.h
src/common/level_generator/: CLevelGenerator.cpp  CLevelGenerator.h
src/common/skill/: CSkillFactory.h  Skill.h
src/common/spells/: CSpellFactory.h  Spells.h
src/common/storage/: CAssetsStorage.h  CFontStorage.cpp  CTextureStorage.cpp  CTextureStorage.h
src/components/: Components.h
src/events/: CEventDispatcher.h  Event.h
src/res/maps/: level1.txt
src/res/saved/: save1.txt  save2.txt  save3.txt
src/systems/: MovementSystem.h
src/systems/animation/: CAnimationSystem.cpp  CAnimationSystem.h
src/systems/camera/: CCameraSystem.cpp  CCameraSystem.h
src/systems/collision/: CCollisionSystem.cpp  CCollisionSystem.h
src/systems/event/: CEventSystem.cpp  CEventSystem.h
src/systems/experience/: CExperienceSystem.cpp  CExperienceSystem.h
src/systems/experience/skill_factory/: CSkillFactory.h
src/systems/fight/: CFightSystem.cpp  CFightSystem.h
src/systems/health/: CHealthSystem.cpp  CHealthSystem.h
src/systems/inventory/: CInventorySystem.cpp  CInventorySystem.h
src/systems/inventory/item_factory/: CInventoryItemFactory.h
src/systems/inventory/items_factory/: CInventoryItemsFactory.h
src/systems/movement/: CMovementSystem.cpp  CMovementSystem.h
src/systems/spell/: CSpellSystem.cpp  CSpellSystem.h
src/systems/spell/spell_factory/: CSpellFactory.h
src/systems/view/: CViewSystem.cpp  CViewSystem.h
src/systems/view/renderers/: IRenderer.h
src/systems/view/renderers/skills/: CSkillsRenderer.cpp  CSkillsRenderer.h
